# shader-formatter

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  formatter.rs  helpers.rs  main.rs  parser.rs  rules.rs  tests.rs
tests/: input.hlsl
tests/default_settings/: input.hlsl  output.hlsl
tests/empty_lines_no_indent/: output.hlsl
tests/function_case/: fail.hlsl  success.hlsl
tests/global_variable_prefix/: fail1.hlsl  fail2.hlsl  fail3.hlsl  fail4.hlsl  fail5.hlsl  fail6.hlsl  fail7.hlsl  success1.hlsl  success2.hlsl
tests/indent_preprocessor/: input.hlsl  output.hlsl
tests/new_line_before_brace/: input.hlsl  output.hlsl
tests/new_line_before_brace_in_multiline_macro/: input.hlsl  output.hlsl
tests/nolint/: fail1.hlsl  fail2.hlsl  success1.hlsl  success2.hlsl  success3.hlsl
tests/preprocessor_if_creates_nesting/: input.hlsl
tests/require_docs_on_fields/: fail1.hlsl  fail2.hlsl  fail3.hlsl  fail4.hlsl  success1.hlsl  success2.hlsl  success3.hlsl
tests/require_docs_on_functions/: fail10.hlsl  fail11.hlsl  fail2.hlsl  fail3.hlsl  fail4.hlsl  fail5.hlsl  fail6.hlsl  fail7.hlsl  fail8.hlsl  fail9.hlsl  success1.hlsl  success10.hlsl  success11.hlsl  success12.hlsl  success13.hlsl  success2.hlsl  success3.hlsl  success4.hlsl  success5.hlsl  success6.hlsl  success7.hlsl  success8.hlsl  success9.hlsl
tests/require_docs_on_structs/: fail1.hlsl  fail3.hlsl  fail4.hlsl  fail5.hlsl  fail6.hlsl  fail7.hlsl  success1.hlsl  success2.hlsl  success3.hlsl  success4.hlsl  success5.hlsl
tests/spaces_in_brackets/: input.hlsl  output.hlsl
(+52 files in other folders)
